<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/splash_code_margin_top"
        android:text="@string/splash_code"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/code"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/splash_margin"
        android:text="@string/code_hint"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:visibility="gone" />

    <ImageView
        android:contentDescription="@string/launcher"
        android:id="@+id/splash_image"
        android:layout_width="@dimen/splash_image_size"
        android:layout_height="@dimen/splash_image_size"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:src="@drawable/ic_launcher" />

</RelativeLayout>