<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.andro_yce.dyad.LoginActivity" >

    <TextView
        android:id="@+id/loginUsernameText"
        android:layout_width="@dimen/login_text_width"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="@dimen/login_margin_top"
        android:text="@string/name"
        android:textSize="@dimen/large" />

    <EditText
        android:id="@+id/loginUsername"
        android:layout_width="@dimen/login_edit_width"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/loginUsernameText"
        android:layout_gravity="right"
        android:layout_marginLeft="@dimen/login_margin_left"
        android:layout_toRightOf="@+id/loginUsernameText"
        android:inputType="text"
        android:textSize="@dimen/large" >

        <requestFocus android:layout_width="wrap_content" />
    </EditText>

    <TextView
        android:id="@+id/loginPhoneText"
        android:layout_width="@dimen/login_text_width"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginUsernameText"
        android:layout_marginTop="@dimen/login_margin_top"
        android:text="@string/phone_number"
        android:textSize="@dimen/large" />

    <EditText
        android:id="@+id/loginPhone"
        android:layout_width="@dimen/login_edit_width"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/loginPhoneText"
        android:layout_below="@+id/loginUsernameText"
        android:layout_marginLeft="@dimen/login_margin_left"
        android:layout_toRightOf="@+id/loginPhoneText"
        android:inputType="phone"
        android:textSize="@dimen/large" >
    </EditText>

    <TextView
        android:id="@+id/loginCodeText"
        android:layout_width="@dimen/login_edit_width"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginPhoneText"
        android:layout_marginTop="@dimen/login_margin_top"
        android:text="@string/code"
        android:textSize="@dimen/large" />

    <CheckBox
        android:id="@+id/loginCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/loginCodeText"
        android:layout_alignBottom="@+id/loginCodeText"
        android:layout_alignRight="@+id/loginPhone" />

    <TextView
        android:id="@+id/loginCodeEnterText"
        android:layout_width="@dimen/login_code_text_width"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginCodeText"
        android:layout_marginTop="@dimen/login_margin_top"
        android:text="@string/code_enter"
        android:textSize="@dimen/large" />

    <EditText
        android:id="@+id/loginCodeEnter"
        android:layout_width="@dimen/login_code_text_width"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginCodeText"
        android:layout_marginLeft="@dimen/login_margin_left"
        android:layout_toRightOf="@+id/loginCodeEnterText"
        android:inputType="phone"
        android:layout_alignBottom="@+id/loginCodeEnterText"
        android:textSize="@dimen/large" >
    </EditText>

    <Button
        android:id="@+id/signupButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginCodeEnterText"
        android:layout_centerHorizontal="true"
        android:textColor="@color/action_bar_background"
        android:text="@string/signup"
        android:textSize="@dimen/large"
        android:layout_marginTop="@dimen/login_margin_top"
        android:background="@color/signup_button_bg" />

</RelativeLayout>